--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "exercicio2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "mocha"
   },
@@ -13,7 +13,8 @@
     "chai": "^5.1.1",
     "chai-http": "^5.0.0",
     "mocha": "^10.6.0",
-    "sinon": "^18.0.0"
+    "sinon": "^18.0.0",
+    "supertest": "^7.0.0"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
